deploy/k8s/instance-b/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: league-b
  labels:
    kubernetes.io/metadata.name: league-b
