deploy/k8s/instance-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridiron-2000-b
  namespace: league-b
  labels:
    app: gridiron-2000-b
spec:
  type: ClusterIP
  selector:
    app: gridiron-2000-b
  ports:
    - name: http
      port: 80
      targetPort: http
